syntax = "proto3";

package home.app.grpc;

option java_multiple_files = true;

message AccommodationRequestMessage {
  int64 id = 1;
  int64 household = 2;
  int64 filed_on = 3;
  int64 requested_for = 4;
  enum Status {
    UNKNOWN = 0;
    ACCEPTED = 1;
    REJECTED = 2;
    PENDING = 3;
  }
  Status status = 5;
  int64 accommodation = 7;
}
